Avances serios backend y frontend